# 8d-cli

./: .env.example  .gitignore  README.md  pyproject.toml
data/factories/factory_default/cases/CASE-DEMO-001/: meta.json
data/factories/factory_default/experience/: control_points.yaml  patterns.yaml  vocabulary.yaml
docs/: REQUIREMENTS.md  TEST_PLAN.md
scripts/: test.sh
src/fireline/: __init__.py  __main__.py
src/fireline/adapters/llm/: client.py  provider.py
src/fireline/adapters/skill/: __init__.py  mapper.py
src/fireline/adapters/storage/: json_store.py
src/fireline/cli/: context.py  main.py
src/fireline/cli/commands/: advance.py  cases.py  close.py  config.py  factory.py  new.py  question.py  report.py  show.py
src/fireline/config/: schema.py
src/fireline/domain/models/: case.py  evidence.py  factory.py  report.py
src/fireline/domain/services/: case_service.py  d4_service.py  experience_service.py  gate_service.py  intake_service.py  question_service.py  report_service.py
src/fireline/skill/: __init__.py  causal.py  control_points.py  deliverables.py  engine.py  gates.py  guru_loader.py  models.py  question_catalog.py
src/fireline/skill/guru_data/: constraints.txt
src/fireline/skill/guru_data/docs/: deliverables.md  gates.md
src/fireline/skill/guru_data/docs/methodology/: d0.md  d1.md  d2.md  d3.md  d4.md  d5.md  d6.md  d7.md  d8.md  quality-methodologies.md
src/fireline/skill/guru_data/docs/patterns/: bayesian-hypothesis.md  temporal-patterns.md  (+1 more)
tests/: conftest.py
tests/test_adapters/: test_json_store.py  test_llm_client.py  test_mapper.py  test_provider.py
tests/test_cli/: test_advance.py  test_cases.py  test_close.py  test_config.py  test_context.py  test_factory_load.py  test_factory_status.py  test_new.py  test_question.py  test_report.py  test_show.py
tests/test_domain/: test_case_model.py  test_case_service.py  test_d4_service.py  test_evidence_model.py  test_experience_service.py  test_factory_model.py  test_gate_service.py  test_intake_service.py  test_question_service.py  test_report_model.py  test_report_service.py
(+65 files in other folders)
