[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fireline"
version = "0.2.0"
description = "8D Quality CLI — Layer 2 customer data modeling over Layer 1 8D methodology"
requires-python = ">=3.11"
dependencies = [
    "8d-root-cause-coach @ file:../8D-Agent/packages/8d-root-cause-coach",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "loguru>=0.7.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
8d = "fireline.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fireline"]
include = [
    "data/",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
