[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fireline"
version = "0.3.0"
description = "8D Quality CLI — self-contained 8D investigation tool for factory quality teams. Embeds 8d-guru methodology."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "loguru>=0.7.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
8d = "fireline.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fireline"]
include = [
    "data/",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
